2009-08-27  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(SRC)/buildobj.h, make-buildobj-CMD)
	(make-buildobj-SH): Fix last change.
	(SRC): Move to before where it's first used.

2009-08-27  Kenichi Handa  <handa@m17n.org>

	* process.c (send_process): Use encode_coding_object instead of
	encode_coding_string to perform eol-conversion even if the string
	is unibyte.

	* coding.c (encode_coding_utf_16): Fix checking of a Unicode
	character.

	* cmds.c (Fself_insert_command): Avoid unnecessay
	unibyte->multibyte conversion.

2009-08-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* callproc.c (Fcall_process): Remove always true #if.

	* lisp.h: Replace #if 0 code for checking with text pointing to
	the --enable-checking configure flag.

	* emacs.c (main): Mention the --enable-profiling configure flag
	instead of using CFLAGS.

2009-08-26  Ken Raeburn  <raeburn@raeburn.org>

	* Makefile.in (buildobj.h): New target.
	(doc.o): Depend on it.
	(temacs${EXEEXT}): Don't generate buildobj.lst.
	(mostlyclean): Delete buildobj.h, not buildobj.lst.
	* makefile.w32-in ($(SRC)/buildobj.h): New target.
	($(BLD)/doc.$(O)): Depend on it.
	(make-buildobj-CMD, make-buildobj-SH): New targets.  (Syntax help
	provided by Eli Zaretskii.)
	($(TEMACS)): Don't generate buildobj.lst.
	* doc.c: Include buildobj.h.
	(buildobj): New static variable.
	(Fsnarf_documentation): Use it, instead of opening and reading
	buildobj.lst.

2009-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (Fdbus_call_method)
	(Fdbus_call_method_asynchronously): Use English numeric format for
	timeout values in doc string.

2009-08-25  Kenichi Handa  <handa@m17n.org>

	* alloc.c (mark_char_table): New function.
	(mark_object): Use mark_char_table for a char-table.

	* lisp.h (CHAR_TABLE_REF_ASCII): New macro.
	(CHAR_TABLE_REF): Use it.

2009-08-23  Ken Raeburn  <raeburn@raeburn.org>

	* Makefile.in (emacs${EXEEXT}) [CANNOT_DUMP]: Set EMACSLOADPATH